样式适配调整

--- a/AppCan_Project/asset-11655123/phone/css/ui-box.css
+++ b/AppCan_Project/asset-11655123/phone/css/ui-box.css
@@ -142,4 +142,8 @@
 	background-repeat:no-repeat;
 	background-position:center;
 }
+/*----- new -----*/
+div#ScrollContent {
+    padding-top:3em;
+}
 
