删除无用文件

--- a/AppCan_Project/asset-11655123/phone/css/ui-box.css
+++ b/AppCan_Project/asset-11655123/phone/css/ui-box.css
@@ -143,7 +143,9 @@
 	background-position:center;
 }
 /*----- new -----*/
-div#ScrollContent {
+#ScrollContent {
     padding-top:3em;
 }
-
+#Header {
+    color:rgba(255,255,255,1);
+}
