--- a/AppCan_Project/asset-11655123/phone/css/ui-box.css
+++ b/AppCan_Project/asset-11655123/phone/css/ui-box.css
@@ -152,3 +152,12 @@
 .table-head .ub-con {
     border-bottom: 0.15em solid #007DB8;
 }
+.select-clear {
+    font-size:1.5em;
+    padding:0 0.4em;
+}
+.page-tip {
+    text-align:center;
+    padding:0.3em 0;
+    font-size: 1.1em;
+}
